# repolens-ai

./: .env.example  .gitignore  Makefile  README.md  cloudbuild.backend.yaml  cloudbuild.frontend.yaml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/repolens/: __init__.py  container.py  eval.py  main.py  models.py
backend/repolens/api/: __init__.py  routes.py
backend/repolens/core/: __init__.py  config.py  logging.py  metrics.py  rate_limit.py
backend/repolens/services/: __init__.py  answering.py  chunking.py  embeddings.py  evaluation.py  filtering.py  ingestion.py  query.py  relevance.py  retrieval.py  storage.py  vector_store.py
backend/tests/: test_answering.py  test_chunking.py  test_embeddings.py  test_end_to_end.py  test_evaluation.py  test_filtering.py  test_ingestion.py  test_rate_limit.py  test_retrieval.py
docs/: deploy-cloud-run.md  example-questions.md
evals/: code_spa_impl_eval.json  code_spa_readme_eval.json  sample_eval.json
fixtures/sample_repo/: README.md
fixtures/sample_repo/config/: default.yml
fixtures/sample_repo/src/: config.ts  server.ts
fixtures/sample_repo/src/eval/: runEval.ts
frontend/: Dockerfile  eslint.config.js  index.html  nginx-runtime-config.sh  nginx.conf  package-lock.json  package.json
frontend/public/: config.js
frontend/src/: App.tsx  api.ts  runtime-config.ts  styles.css  types.ts
frontend/src/components/: Layout.tsx  MetricCard.tsx  QueryResults.tsx
frontend/src/pages/: EvalPage.tsx  HomePage.tsx  RepoPage.tsx
scripts/: run_sample_eval.py
(+6 files in other folders)
