[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repolens-ai-backend"
version = "0.1.0"
description = "RepoLens AI backend for repository ingestion, retrieval, evaluation, and grounded answers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0.1",
  "chromadb>=0.5.5",
  "tree-sitter>=0.22.0",
  "tree-sitter-languages>=1.10.2",
  "uvicorn[standard]>=0.30.0",
  "google-auth>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.1",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["repolens*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

